--- a/DocAssistant.ipynb
+++ b/DocAssistant.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPNovbwBkoZ9uMqchfwhdVT",
+      "authorship_tag": "ABX9TyOjOFkdEarPQvxbofcXeqI1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Carbon Market Document Assistant**"
+        "# **Carbon Market Document Assistant**"
       ],
       "metadata": {
         "id": "2F8rHXmeb_f_"
@@ -38,7 +38,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Install Dependencies"
+        "**Install Dependencies**"
       ],
       "metadata": {
         "id": "MY0bDYxcch-p"
@@ -58,7 +58,7 @@
         "id": "ThOtAsGHcluk",
         "outputId": "2078244d-1a2f-48ab-ca82-7b7aab1134e8"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +149,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Prepare Chunks"
+        "**Prepare Chunks**"
       ],
       "metadata": {
         "id": "XC0xcrUwTB4i"
@@ -170,7 +170,7 @@
         "id": "yRuldzFOxtyv",
         "outputId": "ba5e4caf-4ee0-49ac-d6b3-55b6db66369b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -202,7 +202,7 @@
       "metadata": {
         "id": "m1usfqyN4RLd"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -218,7 +218,7 @@
         "id": "bbRbG7c34mPX",
         "outputId": "ebf3a21c-6182-40dc-d4b0-3c50202e10fa"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -238,7 +238,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Using OpenAI LLM for question answer chains"
+        "**Using OpenAI LLM for question answer chains**"
       ],
       "metadata": {
         "id": "IBM7cnK4TIVT"
@@ -253,7 +253,7 @@
       "metadata": {
         "id": "4T47kWvD4qWb"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -268,7 +268,7 @@
         "id": "rPJv41fAA89d",
         "outputId": "6bf6a574-42c6-41dd-e5cb-0e8593f7e701"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +302,7 @@
       "metadata": {
         "id": "Un44t75p5sXO"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -323,7 +323,7 @@
         "id": "ZZUgfjVXApAE",
         "outputId": "b2a50f37-2e2a-4e3c-94b8-ccbeab5089da"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -355,7 +355,7 @@
         "id": "_ed9W3JLPM73",
         "outputId": "369c7394-2dc5-449d-d717-5b29e04eecd3"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -387,7 +387,7 @@
         "id": "5Xwv7SMHRptA",
         "outputId": "37b17d7d-6afb-47b9-d134-89baaf984ad8"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -419,7 +419,7 @@
         "id": "oN6NiCkNR23B",
         "outputId": "d4b3172e-bd70-4d15-b2dc-1f679a47cd1e"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -452,7 +452,7 @@
         "id": "Z2mrzEMpSivF",
         "outputId": "81eced0b-b8ce-4f3b-b6b7-4125c44db2b0"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
